refactor: JPA로 변경